# exercismo

./: .gitignore  README  exercismio.cabal  stack.yaml
src/: Accumulate.hs  Allergies.hs  Anagram.hs  AtBash.hs  BST.hs  Beer.hs  Bob.hs  Bowling.hs  Brackets.hs  Change.hs  Clock.hs  CustomSet.hs  DNA.hs  DNACount.hs  Etl.hs  FoodChain.hs  Forth.hs  Frequency.hs  Garden.hs  Grains.hs  Hamming.hs  Leap.hs  LinkedList.hs  ListOps.hs  Luhn.hs  Matrix.hs  Meetup.hs  OcrNum.hs  Palindromes.hs  Pascal.hs  PhoneNumber.hs  PigLatin.hs  Prime.hs  PrimeFactors.hs  Queens.hs  Raindrops.hs  RobotSimulator.hs  RunLength.hs  Say.hs  School.hs  (+15 more)
test/: .Tests.hs.swo  Tests.hs
