name:                exercismio
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/exercismio#readme
license:             GPLv3
license-file:        LICENSE
author:              Charlie Harvey
maintainer:          https://charlieharvey.org.uk
copyright:           2016 Charlie Harvey
category:            Stuff
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
--                     , Accumulate
--                     , Allergies
--                     , Anagram
--                     , AtBash
--                     , Beer
--                     , Bob
--                     , DNA
--                     , DNACount
--                     , Etl
--                     , Grains
--                     , Leap
--                     , LinkedList
--                     , ListOps
--                     , PhoneNumber
--                     , PrimeFactors
--                     , Prime
--                     , Raindrops
--                     , RobotSimulator
--                     , School
--                     , Scrabble
--                     , SecretHandshake
--                     , Series
--                     , SpaceAge
--                     , Strain
--                     , Sublist
--                     , SumOfMultiples
--                     , Triangle
--                     , Triplet
--                     , WordCount
--                     , WordSquare
--                     , Wordy
--                     , Wordy2
                       , Pascal
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split
                     , parsec
                     , digits
                     , mtl
  default-language:    Haskell2010

executable exercismio-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , exercismio
  default-language:    Haskell2010

test-suite exercismio-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                     , HUnit
                     , hspec
                     , exercismio
                     , containers
                     , split
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/exercismio
